tests/baselines/reference/restParameterNotLast.errors.txt
restParameterNotLast.ts(1,12): error TS1014: A rest parameter must be last in a parameter list.


==== restParameterNotLast.ts (1 errors) ====
    function f(...x, y) { }
               ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.